# demiurge-agent

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_change.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
agent-catalog/: catalog.yaml
agent-catalog/features/: tts.yaml
agent-catalog/presets/: tts_only.yaml  (+1 more)
agents/: agent.yaml
demiurge/: __init__.py  cli.py  core_repository.py  env_file.py  jobs.py  package_wizard.py  packages.py  provider_presets.py  runtime_timezone.py  schedule_management.py  sdk.py  setup_cli.py  slash.py  util.py
docs/: README.md  agent-core-authoring.md  agents.md  channels.md  cli.md  configuration.md  packages.md  providers.md  quickstart.md  runtime-home.md  schedules.md  security.md  sessions.md  skills.md  tools.md  troubleshooting.md
goal/: 00-48-47-02365d0.md  01-09-21.md  01-29-15.md  01-42-18-0668e86.md  02-08-49.md  02-22-48.md  02-43-05-2b5b2f7.md  03-04-11-4bedffc.md  03-20-26-54a1784.md  03-31-41-74e4fa6.md  03-44-45.md  03-57-12-2cdbba1.md  04-10-43-35579ef.md  04-24-24-0d136fb.md  04-41-15-8859938.md  04-56-25-f118025.md  05-05-59-01d38e0.md  05-21-10-a1501af.md  05-36-38-31e7534.md  05-49-24.md  05-56-30-890707e.md  06-07-22-3eb22a0.md  06-20-25-46845f3.md  06-30-04.md  06-43-32-50ad7fb.md  06-59-07-1454e8b.md  07-14-26-9d1c88f.md  07-26-48-d63308b.md  07-39-54-dbd25f0.md  07-52-44-1b4c2c1.md  08-03-04-bf9677c.md  08-11-21.md  08-23-25-d5ebd16.md  08-32-57-ea28ed7.md  08-44-42.md  09-02-33-e3d90e5.md  09-26-03-8bb142b.md  09-57-03-0445794.md  10-11-07-fe81fae.md  10-29-50-cfa822e.md  (+21 more)
package-repository/: repository.yaml
scripts/: install.sh  probe_provider_replay_compat.py  run_python_ci_tests.py  smoke_managed_install.py  smoke_wheel_install.sh
ui-tui/: package-lock.json  package.json  tsconfig.json
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+621 files in other folders)
