[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "demiurge"
version = "0.4.1"
description = "Build file-backed, self-evolving Agent Cores."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
authors = [
  { name = "AllenReder", email = "yiwenyou_allen@outlook.com" },
]
keywords = ["agent", "agent-framework", "llm", "local-first", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "croniter>=6.2.2",
  "mcp>=1.11,<2",
  "openai>=1.90,<3",
  "prompt_toolkit>=3.0,<4",
  "pydantic>=2.8,<3",
  "pyyaml>=6.0,<7",
  "rich>=13.7,<15",
  "socksio>=1.0.0",
]

[project.urls]
Repository = "https://github.com/AllenReder/demiurge-agent"
Issues = "https://github.com/AllenReder/demiurge-agent/issues"
Documentation = "https://github.com/AllenReder/demiurge-agent#readme"

[project.scripts]
demiurge = "demiurge.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.24,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["demiurge"]

[tool.hatch.build.targets.wheel.force-include]
"demiurge/ui/tui_dist/entry.js" = "demiurge/ui/tui_dist/entry.js"
"agents" = "demiurge/resources/agents"
"package-repository" = "demiurge/resources/package-repository"

[tool.hatch.build.targets.sdist]
only-include = [
  "package-repository",
  "agents",
  "demiurge",
  "docs",
  "scripts",
  "tests",
  "ui-tui",
  "LICENSE",
  "README.md",
  "README.zh-CN.md",
  "pyproject.toml",
  "uv.lock",
]
